Fixed header with z-index

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,8 @@ header {
     position:fixed; 
     background-color: rgba(0,0,0,0.5); 
     height: 75px; 
-    width: calc(100vw - 50px)
+    width: calc(100vw - 50px);
+    z-index: 1;
 }
 
 .header-content {
